--- a/charts/integrify-eks/templates/dashboards-deployment.yaml
+++ b/charts/integrify-eks/templates/dashboards-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo}}/{{ .Values.dashboards.name}}:{{ .Values.dashboards.tag }}"
+          image: "{{ .Values.image.repo}}/{{ .Values.dashboards.repoName}}:{{ .Values.dashboards.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.dashboards.name }}
           ports:
