--- a/charts/integrify-minikube/templates/auth-deployment.yaml
+++ b/charts/integrify-minikube/templates/auth-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.auth.name }}:{{ .Values.auth.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.auth.repoName }}:{{ .Values.auth.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.auth.port }}
