--- a/charts/integrify-minikube/templates/forms-deployment.yaml
+++ b/charts/integrify-minikube/templates/forms-deployment.yaml
@@ -22,7 +22,7 @@ spec:
               name: integrify-secrets
           env:
           {{- toYaml .Values.globalEnv | nindent 10 }}
-          image: "{{ .Values.image.repo }}/{{ .Values.forms.name }}:{{ .Values.forms.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.forms.repoName }}:{{ .Values.forms.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.forms.name }}
           ports:
