--- a/charts/integrify-eks/templates/integrations-deployment.yaml
+++ b/charts/integrify-eks/templates/integrations-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo}}/{{ .Values.integrations.repoName }}:{{ .Values.integrations.tag }}"
+          image: "{{ .Values.image.repo}}/{{ .Values.integrations.name }}:{{ .Values.integrations.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.integrations.name }}
           ports:
