--- a/charts/integrify-eks/templates/reports-deployment.yaml
+++ b/charts/integrify-eks/templates/reports-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.reports.repoName }}:{{ .Values.reports.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.reports.name }}:{{ .Values.reports.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.reports.name }}
           ports:
