--- a/charts/integrify-eks/templates/settings-deployment.yaml
+++ b/charts/integrify-eks/templates/settings-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.settings.repoName }}:{{ .Values.settings.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.settings.name }}:{{ .Values.settings.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.settings.name }}
           ports:
