--- a/charts/integrify-eks/templates/tenant-deployment.yaml
+++ b/charts/integrify-eks/templates/tenant-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.tenant.repoName }}:{{ .Values.tenant.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.tenant.name }}:{{ .Values.tenant.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.tenant.name }}
           ports:
