updated ingress to use values file for scheduler port

--- a/charts/integrify-eks/templates/integrify-eks-ingress.yaml
+++ b/charts/integrify-eks/templates/integrify-eks-ingress.yaml
@@ -156,7 +156,7 @@ spec:
               service:
                 name: scheduler
                 port:
-                  number: 3504
+                  number: {{ .Values.scheduler.port }}
           - path: /api/settings
             pathType: Prefix
             backend:
