update minikube ingress port for scheduler

--- a/charts/integrify-minikube/templates/integrify-ingress-nginx-http.yaml
+++ b/charts/integrify-minikube/templates/integrify-ingress-nginx-http.yaml
@@ -158,7 +158,7 @@ spec:
             service:
               name: scheduler
               port:
-                number: 3504
+                number: {{ .Values.scheduler.port }}
         - path: /api/settings*
           pathType: Prefix
           backend:
