hard coded image hashes, bump chart version, updated app version

--- a/charts/integrify-minikube/templates/auth-deployment.yaml
+++ b/charts/integrify-minikube/templates/auth-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.auth.repoName }}:{{ .Values.auth.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.auth.repoName }}:997af42"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.auth.port }}
