--- a/charts/integrify-minikube/templates/task-processor-deployment.yaml
+++ b/charts/integrify-minikube/templates/task-processor-deployment.yaml
@@ -22,7 +22,7 @@ spec:
               name: integrify-secrets
           env:
           {{- toYaml .Values.globalEnv | nindent 10 }}
-          image: "{{ .Values.image.repo }}/{{ .Values.taskProcessor.repoName }}:{{ .Values.taskProcessor.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.taskProcessor.repoName }}:e511d1c"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.taskProcessor.name }}
           volumeMounts:
