--- a/charts/integrify-minikube/templates/tenant-deployment.yaml
+++ b/charts/integrify-minikube/templates/tenant-deployment.yaml
@@ -22,7 +22,7 @@ spec:
               name: integrify-secrets
           env:
           {{- toYaml .Values.globalEnv | nindent 10 }}
-          image: "{{ .Values.image.repo }}/{{ .Values.tenant.repoName }}:{{ .Values.tenant.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.tenant.repoName }}:deed413"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.tenant.name }}
           ports:
