--- a/charts/integrify-eks/templates/config-processor-deployment.yaml
+++ b/charts/integrify-eks/templates/config-processor-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.configProcessor.repoName }}:{{ .Values.configProcessor.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.configProcessor.repoName }}:72e336d"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.configProcessor.name }}
           resources:
