--- a/charts/integrify-eks/templates/core-service-deployment.yaml
+++ b/charts/integrify-eks/templates/core-service-deployment.yaml
@@ -22,7 +22,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.coreService.repoName }}:{{ .Values.coreService.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.coreService.repoName }}:e511d1c"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.coreService.name }}
           ports:
