--- a/charts/integrify-eks/templates/files-deployment.yaml
+++ b/charts/integrify-eks/templates/files-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.files.repoName }}:{{ .Values.files.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.files.repoName }}:7edb15d"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.files.name }}
           ports:
