--- a/charts/integrify-eks/templates/ssp-deployment.yaml
+++ b/charts/integrify-eks/templates/ssp-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.ssp.repoName }}:{{ .Values.ssp.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.ssp.repoName }}:6cb05e8"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.ssp.name }}
           ports:
