--- a/charts/integrify-eks/templates/task-dispatcher-deployment.yaml
+++ b/charts/integrify-eks/templates/task-dispatcher-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           envFrom:
           - secretRef:
               name: integrify-secrets
-          image: "{{ .Values.image.repo }}/{{ .Values.taskDispatcher.repoName }}:{{ .Values.taskDispatcher.tag }}"
+          image: "{{ .Values.image.repo }}/{{ .Values.taskDispatcher.repoName }}:1413c62"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: {{ .Values.taskDispatcher.name }}
           ports:
